networking, filesystem, refactoring

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,9 +12,13 @@
 platform = espressif8266
 board = nodemcuv2
 board_build.mcu = esp8266
+board_build.filesystem = littlefs
 framework = arduino
 monitor_speed = 115200
 upload_port = COM7
+build_flags =
+  -DPIO_FRAMEWORK_ARDUINO_LITTLEFS
 lib_deps = 
   esp32async/ESPAsyncWebServer@^3.7.7
+
 
